Bug 476808 - Symbolic links on desktop:/ cannot open original location via properties dialog
Summary: Symbolic links on desktop:/ cannot open original location via properties dialog
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: desktop:/ IOWorker (other bugs)
Version First Reported In: 5.27.9
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 486459 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-10 21:17 UTC by Luke Horwell
Modified: 2025-02-08 03:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke Horwell 2023-11-10 21:17:34 UTC
SUMMARY
For symbolic links stored on the desktop, the [>.] button to open the original location (via the Properties window) does not work as expected. The error message reads "The file or folder [path] does not exist" where [path] erroneously prefixes "/home/luke/Desktop" at the start. The symbolic link itself is valid, and the path inside the "Points to" text box is correct.

This only happens when configured with the default setting:
Configure Desktop and Wallpaper → Location → "Desktop folder"

The [>.] button works when this setting is set to "Places panel item" or "Custom location", as well as within Dolphin.

Workaround: Set "/home/<user>" as the custom location.

STEPS TO REPRODUCE
1. Configure your Desktop Folder Settings to "Desktop folder".
2. Create a symbolic link on desktop (i.e. CTRL+SHIFT+drag a file)
3. Right click the file and open Properties.
4. Click the [>.] button to open the original location.

OBSERVED RESULT
An error appears stating that the path does not exist. The path in the error message prefixes /home/<user>/Desktop.

EXPECTED RESULT
Dolphin opens to show the original location for the symbolic link.

SOFTWARE/OS VERSIONS
OS: Arch Linux
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Would love to cross-check with Plasma 6 Alpha, but the unstable Neon ISO and Arch kde-unstable packages result in a black screen under a VirtualBox VM at this time.
Comment 1 Luke Horwell 2023-11-11 15:06:42 UTC
Can confirm the bug happens on Plasma 5.27.80 (Plasma 6 Alpha) too. Plus, the "link" icon at the bottom-right of the icon was missing, but the icon's label was italic.
Comment 2 Nate Graham 2023-11-15 20:11:12 UTC
Can reproduce. An issue with the desktop:/ KIO Worker, I think.
Comment 3 Nate Graham 2024-05-03 19:52:24 UTC
*** Bug 486459 has been marked as a duplicate of this bug. ***
Comment 4 kamkaz 2025-02-02 13:45:46 UTC
Note, that this bug does not happen only when following symbolic links from "desktop:".

It also happens, when they are are in other "special" protocol-like locations, like "trash:".

With that in mind, are you sure it has anything to do with desktop:/ IOWorker?

I was trying to find which module is responsible for the "Properties for {file}" window, but I can't locate it.
Comment 5 Bug Janitor Service 2025-02-03 04:59:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1810
Comment 6 kamkaz 2025-02-03 17:36:53 UTC
Git commit 421cb0e67df086bbde8bc42f4c5a1be6093979d9 by Kamil Kaznowski.
Committed on 03/02/2025 at 17:32.
Pushed by meven into branch 'master'.

Fix symlink path resolution in File Properties

If a symlink is opened from a virtual path like "desktop:/", the path
resolution incorrectly applied absolute UNIX path to the virtual path.

It resulted in an error whenever an "Open directory of symlink target"
button was pressed. The absolute symlink path was combined with a
protocol: "desktop:/absolute/symlink/path".

Always change the source URL to the Most Local URL first before resolving
the symlink.

M  +3    -1    src/widgets/kpropertiesdialogbuiltin_p.cpp

https://invent.kde.org/frameworks/kio/-/commit/421cb0e67df086bbde8bc42f4c5a1be6093979d9